--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ignite-ui/react": "^2.2.4",
     "next": "15.4.6",
+    "phosphor-react": "^1.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
