--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@ignite-ui/react": "^2.2.4",
+    "@prisma/client": "^6.14.0",
     "next": "15.4.6",
     "phosphor-react": "^1.4.1",
     "react": "19.1.0",
@@ -26,6 +27,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "prisma": "^6.14.0",
     "typescript": "^5"
   }
 }
