--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.14.0",
     "axios": "^1.11.0",
     "next": "15.4.6",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
