--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^6.14.0",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
     "nookies": "^2.5.2",
